--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-reanimated": "~3.6.2",
     "react-native-vision-camera": "^3.9.0"
   },
   "devDependencies": {
