--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       "bundleIdentifier": "com.dodosoft.vision-camera"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
