--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "expo": "~50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-image": "~1.10.6",
+    "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
