--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vision-camera",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -13,7 +13,9 @@
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-image": "~1.10.6",
+    "expo-linking": "~6.2.2",
     "expo-notifications": "~0.27.6",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
@@ -21,6 +23,8 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vision-camera": "^3.9.0"
   },
   "devDependencies": {
